--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_marginTop="10dp"
-    android:layout_marginRight="10dp"
-    android:background="@color/imageBorderColor"
-    android:layout_width="60dp"
-    android:layout_height="60dp">
+<com.edu.schooltask.ui.view.ImageLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/image_layout"
+    android:layout_marginTop="5dp"
+    android:layout_marginRight="5dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <ImageView
-        android:layout_margin="0.5dp"
         android:id="@+id/image_image"
         android:scaleType="centerCrop"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:background="@color/inputBackground"/>
-</RelativeLayout>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+</com.edu.schooltask.ui.view.ImageLayout>
