--- a/app/src/main/res/layout/view_task_comment.xml
+++ b/app/src/main/res/layout/view_task_comment.xml
@@ -25,19 +25,20 @@
     </RelativeLayout>
 
     <TextView
-        android:paddingLeft="50dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginLeft="55dp"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
         android:paddingRight="20dp"
-        android:textSize="12sp"
+        android:textSize="13sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tc_comment"
+        android:textColor="@color/darkColor"
         android:text="评论内容"/>
     <View
         android:layout_marginLeft="50dp"
         android:layout_marginRight="10dp"
         android:layout_width="match_parent"
-        android:layout_height="0.1dp"
+        android:layout_height="0.2dp"
         android:background="@color/lineColor"/>
 </LinearLayout>
