--- a/app/src/main/res/layout/view_user_item.xml
+++ b/app/src/main/res/layout/view_user_item.xml
@@ -16,7 +16,7 @@
         android:layout_toRightOf="@id/ui_head"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
+        android:textColor="@color/darkColor"
         android:text="昵称"/>
     <TextView
         android:id="@+id/ui_sign"
