--- a/app/src/main/res/layout/view_user_small.xml
+++ b/app/src/main/res/layout/view_user_small.xml
@@ -10,6 +10,7 @@
         android:layout_height="18dp" />
     <TextView
         android:id="@+id/us_name"
+        android:textColor="@color/darkColor"
         android:layout_marginLeft="5dp"
         android:textSize="12sp"
         android:layout_width="wrap_content"
