--- a/app/src/main/res/layout/view_user_task.xml
+++ b/app/src/main/res/layout/view_user_task.xml
@@ -6,52 +6,53 @@
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/ur_head"
+        android:id="@+id/ut_head"
         android:layout_width="40dp"
         android:layout_height="40dp"/>
     <TextView
-        android:id="@+id/ur_name"
+        android:id="@+id/ut_name"
+        android:textColor="@color/darkColor"
         android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@id/ur_head"
+        android:layout_toRightOf="@id/ut_head"
         android:textSize="13sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <TextView
-        android:id="@+id/ur_sex"
-        android:layout_alignTop="@id/ur_name"
-        android:layout_toRightOf="@id/ur_name"
+        android:id="@+id/ut_sex"
+        android:layout_alignTop="@id/ut_name"
+        android:layout_toRightOf="@id/ut_name"
         android:layout_marginTop="2dp"
         android:layout_marginLeft="3dp"
         android:textSize="10sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
-        android:id="@+id/ur_release_time"
-        android:layout_below="@id/ur_name"
-        android:layout_marginTop="5dp"
+        android:id="@+id/ut_release_time"
+        android:layout_below="@id/ut_name"
+        android:layout_marginTop="3dp"
         android:paddingTop="1dp"
         android:paddingBottom="1dp"
-        android:layout_alignLeft="@id/ur_name"
+        android:layout_alignLeft="@id/ut_name"
         android:textColor="@color/hintColor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="11sp"/>
     <TextView
-        android:id="@+id/ur_school"
+        android:id="@+id/ut_school"
         android:textSize="10sp"
         android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@id/ur_release_time"
-        android:layout_alignTop="@id/ur_release_time"
-        android:layout_alignBottom="@id/ur_release_time"
+        android:layout_toRightOf="@id/ut_release_time"
+        android:layout_alignTop="@id/ut_release_time"
+        android:layout_alignBottom="@id/ut_release_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_label"/>
     <TextView
-        android:id="@+id/ur_des"
-        android:layout_alignTop="@id/ur_release_time"
-        android:layout_alignBottom="@id/ur_release_time"
+        android:id="@+id/ut_des"
+        android:layout_alignTop="@id/ut_release_time"
+        android:layout_alignBottom="@id/ut_release_time"
         android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@id/ur_school"
+        android:layout_toRightOf="@id/ut_school"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_label"
